attempt to fix the too light link color on mobile again

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -1,5 +1,9 @@
 @charset "UTF-8";
 
+:root {
+  color-scheme: light;
+}
+
 html, body {
   height: auto;
   min-height: 100%;
